package system.personne;
/**
 * @brief Classe représentant un proffesseur héritant de la class Personne.
 */
public class Professeur extends  Personne{
    /**
     * @brief Constructeur de la classe Professeur.
     * @param num
     * @param nom
     * @param prenom
     */
    public Professeur(String num, String nom, String prenom) {
        super(num, nom, prenom);
    }
}
