package system.personne;
/**
 * @brief Classe représentant un surveillant héritant de la class Personne.
 */
public class Surveillant extends  Personne{
    /**
     * @brief Constructeur de la classe Surveillant
     * @param num
     * @param nom
     * @param prenom
     */
    public Surveillant(String num, String nom, String prenom) {
        super(num, nom, prenom);
    }
}
